# logpb

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build  clean  conanfile.txt  config  gen_msg_defs  libprotobuf-tips.txt  plan.txt  run  to-do  win_build
app/gui/: CMakeLists.txt  connect_window.cpp  connect_window.h  connect_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
git/: at  config
msg_defs/: msg_defs.proto  msg_defs_errors.proto  session.proto  session.toml
resources/: nanopb.proto
src/: CMakeLists.txt  logger.h  main.cpp  msg_logger.h  msg_type_gen.cpp  msg_type_gen.h  stream_generator.h  stream_parser.cpp
src/app/: CMakeLists.txt  session.cpp  session.h  session_loader.cpp  session_loader.h
src/base/: CMakeLists.txt  device_connection.cpp  device_connection.h  device_connection_impl.cpp  device_connection_impl.h  hash_map.h  logger.cpp  logger.h  main.cpp  msg_logger.h  msg_type_gen.cpp  msg_type_gen.h  parse_error.cpp  parse_error.h  plotter.cpp  plotter.h  stream_generator.cpp  stream_parser.cpp  stream_parser.h  uio.h
src/base/msg_defs/: nanopb.pb.h
src/gui/: CMakeLists.txt  add_logger_window.cpp  add_logger_window.h  add_logger_window.ui  add_plot_window.cpp  add_plot_window.h  add_plot_window.ui  basic_plot.cpp  basic_plot.h  basic_plot.ui  connect_window.cpp  connect_window.h  connect_window.ui  load_msg_defs.cpp  load_msg_defs.h  load_msg_defs.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msg_field_selection.cpp  msg_field_selection.h  msg_field_selection.ui
src/msg_defs/: msg_defs.pb.cc  msg_defs.pb.h  nanopb.pb.cc
tests/: CMakeLists.txt  session_test.cpp
